Delete geyser-extension; write Geyser's own mapping files instead
Geyser reads a custom_mappings folder natively, for items and blocks
alike, on plugin and standalone installs. Kalo shipped a whole extension
jar to do what Geyser already does by itself.

The item half of the old bedrock-mappings.json was already Geyser's
format_version 2 layout verbatim, so only the block half was ever
proprietary — kalo:blocks and kalo:geometries were keys nothing but Kalo's
own extension could read. Blocks now go out as Geyser's format keyed by
the Java state each one overrides, which is the same decision the bridge
makes through the API, and per-block geometry makes the geometries lookup
table unnecessary.

Items and blocks are two files because Geyser versions the two formats
separately: format_version 2 and 1.

What a standalone Geyser needs drops from "install a jar, copy a mapping
file, copy the pack" to "copy two mapping files and the pack" — with
nothing of Kalo's running inside Geyser, and no second artifact to
release, version, or keep in step. The four-way drift between GeyserBridge
and KaloExtension goes with it: there is one implementation left.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>